:memo: Update references

--- a/collaborative-programming/references.bib
+++ b/collaborative-programming/references.bib
@@ -1,3 +1,60 @@
+@incollection{Atla24,
+  title = {Advanced {{Git}} Tutorials},
+  booktitle = {Software {{Development}}},
+  author = {{Atlassian}},
+  year = {2024},
+  url = {https://www.atlassian.com/git/tutorials/advanced-overview},
+  urldate = {2024-02-22},
+  abstract = {Refine your existing Git skills by taking a look under the hood at advanced Git features. Learn the tips and tricks you need to be an advanced Git user.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{Atla24a,
+  title = {Gitflow {{Workflow}}},
+  author = {{Atlassian}},
+  year = {2024},
+  journal = {Software Development},
+  url = {https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow},
+  urldate = {2024-02-24},
+  abstract = {A deep dive into the Gitflow Workflow. Learn if this Git workflow is right for you and your team with this comprehensive tutorial.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{Atla24b,
+  title = {Git {{Feature Branch Workflow}}},
+  author = {{Atlassian}},
+  year = {2024},
+  journal = {Software Development},
+  url = {https://www.atlassian.com/git/tutorials/comparing-workflows/feature-branch-workflow},
+  urldate = {2024-02-24},
+  abstract = {A feature branch is a temporary branch used for development or testing purposes. Learn about the best way to manage them using this guide!},
+  langid = {english},
+  language = {en}
+}
+
+@misc{Bran24,
+  title = {{{TIL}}: {{Git}}},
+  author = {Branchaud, Josh},
+  year = {2024},
+  month = feb,
+  url = {https://github.com/jbranchaud/til/?tab=readme-ov-file#git},
+  urldate = {2024-02-22},
+  abstract = {:memo: Today I Learned},
+  copyright = {MIT}
+}
+
+@book{Chac14,
+  title = {Pro {{Git}}},
+  author = {Chacon, Scott and Straub, Ben},
+  year = {2014},
+  edition = {2nd},
+  publisher = {{Apress}},
+  url = {https://git-scm.com/book/en/v2},
+  urldate = {2024-02-22}
+}
+
 @misc{cmi-23,
   title = {Git/{{GitHub}} 04.06.2023},
   author = {{cmi-cnl.slack.com\#science-code-exchange}},
@@ -14,5 +71,437 @@
   year = {2023},
   month = apr,
   address = {{https://app.gather.town/app/rhg4t5VmikWm3hpX/outdooroffice}},
-  url = {https://cmi-cnl.slack.com/archives/C04MVF9UJLC/p1680705851900279}
+  url = {https://cmi-cnl.slack.com/archives/C04MVF9UJLC/p1680705851900279},
+  langid = {english},
+  language = {en}
+}
+
+@misc{Conv,
+  title = {Conventional {{Commits}} 1.0.0 {{Summary}}},
+  author = {{Conventional Commits}},
+  journal = {Conventional Commits},
+  url = {https://www.conventionalcommits.org/en/v1.0.0/#summary},
+  urldate = {2024-02-23},
+  abstract = {A specification for adding human and machine readable meaning to commit messages}
+}
+
+@article{Coud20,
+  title = {Git {{Rev News Edition}} 65},
+  author = {Couder, Christian and Nar{\k e}bski, Jakub and Jansen, Markus and Sivaraam, Kaartic},
+  year = {2020},
+  month = jul,
+  url = {https://git.github.io/rev_news/2020/07/29/edition-65/},
+  urldate = {2024-02-24}
+}
+
+@misc{Cues,
+  title = {About},
+  author = {Cuesta, Carlos},
+  journal = {gitmoji},
+  url = {https://gitmoji.dev/about},
+  urldate = {2024-02-23},
+  abstract = {An emoji guide for your commit messages.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{Git,
+  title = {Reference},
+  author = {{Git}},
+  journal = {Git},
+  url = {https://git-scm.com/docs},
+  urldate = {2024-02-23}
+}
+
+@misc{git-24,
+  title = {Git-Tips},
+  author = {{git-tips}},
+  year = {2024},
+  month = feb,
+  publisher = {{git-tips}},
+  url = {git.io/git-tips},
+  urldate = {2024-02-23},
+  abstract = {Most commonly used git tips and tricks.},
+  copyright = {MIT}
+}
+
+@incollection{Git22,
+  title = {Branching {{Strategies}}},
+  booktitle = {{{GitVersion Documentation}}: {{Learn}}},
+  author = {{Git Tools}},
+  year = {2022},
+  url = {https://gitversion.net/docs/learn/branching-strategies/},
+  urldate = {2024-02-24},
+  abstract = {From git log to SemVer in no time}
+}
+
+@misc{Gita,
+  title = {Git},
+  author = {{Git}},
+  url = {https://git-scm.com/},
+  urldate = {2024-02-23}
+}
+
+@misc{GitH,
+  title = {{{GIT CHEAT SHEET}}},
+  author = {{GitHub Education}},
+  url = {https://education.github.com/git-cheat-sheet-education.pdf},
+  urldate = {2024-02-22},
+  file = {/Users/jon.clucas/Zotero/storage/SXTS6PFY/git-cheat-sheet-education.pdf}
+}
+
+@misc{GitH23d,
+  title = {{{GitHub Skills}}},
+  author = {{GitHub, Inc.}},
+  year = {2023},
+  url = {https://skills.github.com/},
+  urldate = {2024-02-22}
+}
+
+@misc{GitH24,
+  title = {{{GitHub Docs}}},
+  author = {{GitHub, Inc.}},
+  year = {2024},
+  journal = {GitHub Docs},
+  url = {https://docs.github.com/_next/data/Q1PdjUCscxXu6K_thersU/en.json},
+  urldate = {2024-02-21},
+  abstract = {Help for wherever you are on your GitHub journey.},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{GitH24a,
+  title = {About Repositories},
+  booktitle = {{{GitHub Docs}}},
+  author = {{GitHub, Inc.}},
+  year = {2024},
+  url = {https://docs.github.com/en/repositories/creating-and-managing-repositories/about-repositories},
+  urldate = {2024-02-22},
+  abstract = {A repository contains all of your code, your files, and each file's revision history. You can discuss and manage your work within the repository.},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{GitH24b,
+  title = {Best Practices for Repositories},
+  booktitle = {{{GitHub Docs}}},
+  author = {{GitHub, Inc.}},
+  year = {2024},
+  url = {https://docs.github.com/en/repositories/creating-and-managing-repositories/best-practices-for-repositories},
+  urldate = {2024-02-22},
+  abstract = {Learn how to use repositories most effectively.},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{GitH24c,
+  title = {About {{Projects}}},
+  booktitle = {{{GitHub Docs}}},
+  author = {{GitHub, Inc.}},
+  year = {2024},
+  url = {https://docs.github.com/en/issues/planning-and-tracking-with-projects/learning-about-projects/about-projects},
+  urldate = {2024-02-22},
+  abstract = {Projects is an adaptable, flexible tool for planning and tracking work on GitHub.},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{GitH24d,
+  title = {Communicating on {{GitHub}}},
+  booktitle = {{{GitHub Docs}}},
+  author = {{GitHub, Inc.}},
+  year = {2024},
+  url = {https://docs.github.com/en/get-started/using-github/communicating-on-github},
+  urldate = {2024-02-22},
+  abstract = {You can discuss specific projects and changes, as well as broader ideas or team goals, using different types of discussions on GitHub.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{GitH24e,
+  title = {Open {{Source Guides}}},
+  author = {{GitHub and friends}},
+  year = {2024},
+  journal = {Open Source Guides},
+  url = {https://opensource.guide/},
+  urldate = {2024-02-22},
+  abstract = {Learn how to launch and grow your project.},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{GitH24f,
+  title = {About Branches},
+  booktitle = {{{GitHub Docs}}},
+  author = {{GitHub, Inc.}},
+  year = {2024},
+  url = {https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches},
+  urldate = {2024-02-22},
+  abstract = {Use a branch to isolate development work without affecting other branches in the repository. Each repository has one default branch, and can have multiple other branches. You can merge a branch into another branch using a pull request.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{GitH24g,
+  title = {Hello {{GitHub Actions}}},
+  author = {{GitHub Skills}},
+  year = {2024},
+  month = feb,
+  url = {https://github.com/skills/hello-github-actions},
+  urldate = {2024-02-22},
+  abstract = {Create a GitHub Action and use it in a workflow.},
+  copyright = {MIT},
+  howpublished = {GitHub Skills}
+}
+
+@misc{GitH24h,
+  title = {Connect the {{Dots}}},
+  author = {{GitHub Skills}},
+  year = {2024},
+  month = feb,
+  url = {https://github.com/skills/connect-the-dots},
+  urldate = {2024-02-22},
+  abstract = {Useful tips when navigating through your repository},
+  copyright = {MIT},
+  howpublished = {GitHub Skills}
+}
+
+@misc{GitH24i,
+  title = {Resolve Merge Conflicts},
+  author = {{GitHub Skills}},
+  year = {2024},
+  month = feb,
+  url = {https://github.com/skills/resolve-merge-conflicts},
+  urldate = {2024-02-22},
+  abstract = {Learn why conflicts happen and how to resolve them.},
+  copyright = {MIT},
+  howpublished = {GitHub Skills}
+}
+
+@misc{GitH24j,
+  title = {Review Pull Requests},
+  author = {{GitHub Skills}},
+  year = {2024},
+  month = feb,
+  url = {https://github.com/skills/review-pull-requests},
+  urldate = {2024-02-22},
+  abstract = {Collaborate and work together on GitHub.},
+  copyright = {MIT},
+  howpublished = {GitHub Skills}
+}
+
+@misc{GitH24k,
+  title = {Introduction to {{GitHub}}},
+  author = {{GitHub Skills}},
+  year = {2024},
+  month = feb,
+  url = {https://github.com/skills/introduction-to-github},
+  urldate = {2024-02-22},
+  abstract = {Get started using GitHub in less than an hour.},
+  copyright = {MIT},
+  howpublished = {GitHub Skills}
+}
+
+@misc{GitH24l,
+  title = {Remove Commit History},
+  author = {{GitHub Skills}},
+  year = {2024},
+  month = feb,
+  url = {https://github.com/skills/change-commit-history},
+  urldate = {2024-02-22},
+  abstract = {A skills course on changing the commit history with Git},
+  copyright = {MIT},
+  howpublished = {GitHub Skills}
+}
+
+@incollection{GitH24m,
+  title = {Creating a Template Repository},
+  booktitle = {{{GitHub Docs}}},
+  author = {{GitHub, Inc.}},
+  year = {2024},
+  url = {https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-template-repository},
+  urldate = {2024-02-22},
+  abstract = {You can make an existing repository a template, so you and others can generate new repositories with the same directory structure, branches, and files.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{GitHa,
+  title = {{{GitHub}}.Com {{Help Documentation}}},
+  journal = {GitHub Docs},
+  url = {https://docs.github.com/en},
+  urldate = {2024-02-23},
+  abstract = {Get started, troubleshoot, and make the most of GitHub. Documentation for new users, developers, administrators, and all of GitHub's products.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{GitHb,
+  title = {Removing Sensitive Data from a Repository},
+  author = {{GitHub, Inc.}},
+  journal = {GitHub Docs},
+  url = {https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository},
+  urldate = {2024-02-24},
+  abstract = {If you commit sensitive data, such as a password or SSH key into a Git repository, you can remove it from the history. To entirely remove unwanted files from a repository's history you can use either the git filter-repo tool or the BFG Repo-Cleaner open source tool.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{Gree24,
+  title = {{{GitHub Cheat Sheet}}},
+  author = {Green, Tim},
+  year = {2024},
+  month = feb,
+  url = {http://git.io/sheet},
+  urldate = {2024-02-22},
+  abstract = {A list of cool features of Git and GitHub.},
+  copyright = {MIT}
+}
+
+@misc{Hinc23,
+  title = {Personal {{READMEs}}},
+  author = {Hinck, Kaeti},
+  year = {2023},
+  month = dec,
+  url = {https://github.com/kaeti/personal-readme},
+  urldate = {2024-02-21},
+  abstract = {A template for how we created personal READMEs for Post Graphics team},
+  langid = {english},
+  language = {en}
+}
+
+@misc{NMin,
+  title = {{{NMinD}} Collaborative Version Control Guidelines - {{HackMD}}},
+  url = {https://hackmd.io/wPnRTHdoTQSJZRFrFGAcmg?view=},
+  urldate = {2024-02-23},
+  langid = {american},
+  language = {en-US}
+}
+
+@incollection{Open24,
+  title = {Orienting Yourself to a New Project},
+  booktitle = {How to {{Contribute}} to {{Open Source}}},
+  author = {{Open Source Guides}},
+  year = {2024},
+  month = feb,
+  url = {https://opensource.guide/how-to-contribute/#orienting-yourself-to-a-new-project},
+  urldate = {2024-02-22},
+  abstract = {Want to contribute to open source? A guide to making open source contributions, for first-timers and for veterans.},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{Open24a,
+  title = {How to Submit a Contribution},
+  booktitle = {How to {{Contribute}} to {{Open Source}}},
+  author = {{Open Source Guides}},
+  year = {2024},
+  month = feb,
+  url = {https://opensource.guide/how-to-contribute/#how-to-submit-a-contribution},
+  urldate = {2024-02-22},
+  abstract = {Want to contribute to open source? A guide to making open source contributions, for first-timers and for veterans.},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{Open24b,
+  title = {Documenting Your Processes},
+  booktitle = {Best {{Practices}} for {{Maintainers}}},
+  author = {{Open Source Guides}},
+  year = {2024},
+  month = feb,
+  url = {https://opensource.guide/best-practices/#documenting-your-processes},
+  urldate = {2024-02-22},
+  abstract = {Making your life easier as an open source maintainer, from documenting processes to leveraging your community.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{Open24c,
+  title = {Anatomy of an Open Source Project},
+  author = {{Open Source Guides}},
+  year = {2024},
+  month = feb,
+  journal = {How to Contribute to Open Source},
+  url = {https://opensource.guide/how-to-contribute/#anatomy-of-an-open-source-project},
+  urldate = {2024-02-23},
+  abstract = {Want to contribute to open source? A guide to making open source contributions, for first-timers and for veterans.},
+  langid = {english},
+  language = {en}
+}
+
+@misc{Pete04,
+  title = {{{PEP}} 20 -- {{The Zen}} of {{Python}}},
+  author = {Peters, Tim},
+  year = {2004},
+  month = aug,
+  journal = {Python Enhancement Proposals},
+  url = {https://peps.python.org/pep-0020/#the-zen-of-python}
+}
+
+@misc{Port19,
+  title = {Fix Conflicts Only Once with Git Rerere},
+  author = {Porteneuve, Christophe},
+  year = {2019},
+  month = sep,
+  journal = {Medium},
+  url = {https://medium.com/@porteneuve/fix-conflicts-only-once-with-git-rerere-7d116b2cec67},
+  urldate = {2024-02-23},
+  abstract = {Fixing conflicts is chore enough not to do the same ones over and over again. See how rerere makes Git remember your conflict fixes!},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{Raym03,
+  title = {Basics of the {{Unix Philosophy}}},
+  booktitle = {The {{Art}} of {{Unix Programming}}},
+  author = {Raymond, Eric Steven},
+  year = {2003},
+  month = sep,
+  edition = {Revision 1.0},
+  url = {http://www.catb.org/~esr/writings/taoup/html/ch01s06.html},
+  urldate = {2024-02-23}
+}
+
+@incollection{Sing24,
+  title = {Getting Oriented},
+  booktitle = {Shape {{Up}}: {{Stop Running}} in {{Circles}} and {{Ship Work}} That {{Matters}}},
+  author = {Singer, Ryan},
+  year = {2024},
+  url = {https://basecamp.com/shapeup/3.1-chapter-10#getting-oriented},
+  urldate = {2024-02-22},
+  langid = {english},
+  language = {en}
+}
+
+@book{Sing24a,
+  title = {Shape {{Up}}: {{Stop Running}} in {{Circles}} and {{Ship Work}} That {{Matters}}},
+  shorttitle = {Shape {{Up}}},
+  author = {Singer, Ryan},
+  year = {2024},
+  url = {https://basecamp.com/shapeup},
+  urldate = {2024-02-22},
+  abstract = {Shape Up will help you break free of ``best practices'' that aren't really working, think deeper about the right problems, and start shipping meaningful projects your team can celebrate.},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{Sing24b,
+  title = {Scope Grows like Grass},
+  booktitle = {Shape {{Up}}: {{Stop Running}} in {{Circles}} and {{Ship Work}} That {{Matters}}},
+  author = {Singer, Ryan},
+  year = {2024},
+  url = {https://basecamp.com/shapeup/3.5-chapter-14#scope-grows-like-grass},
+  urldate = {2024-02-22},
+  langid = {english},
+  language = {en}
+}
+
+@incollection{The24,
+  title = {Using {{GitHub Features}} to Foster Collaboration},
+  booktitle = {The {{Turing Way}}},
+  author = {{The Turing Way Community}},
+  year = {2024},
+  url = {https://the-turing-way.netlify.app/collaboration/github-novice/github-novice-features#using-github-features-to-foster-collaboration},
+  urldate = {2024-02-23}
 }
